# exchange

./: .gitignore  LICENSE  README.md  launch_training.py  requirements.txt  run_all.sh  train.py
checkpoints/evolution/: best_agent_gen_879_fit_1566840.16.npy
docs/: building-an-exchange.md  strategy-discovery.md
examples/: discover_strategies.py  gym_example.py  test_multi_agent.py
src/: algorithms.py  evolve.py  exchange.py  gym_env.py  multi_agent_env.py  networks.py  parallel_env.py  sim.py  test_exchange.py  test_parallel_env.py  train_hybrid.py  train_rl.py  train_rl_parallel.py  train_rl_v2.py  visualizer.py
src.jl/: Algorithms.jl  Exchange.jl  Sim.jl  Visualizer.jl
src.rs/: Cargo.toml  build.rs
src.rs/src/: algorithms.rs  exchange.rs  lib.rs  py.rs  sim.rs  tests.rs  visualizer.rs
src.vector/: __init__.py  batch_sim.py  exchange_vector.py  matching_kernels.py  vec_env.py
